--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -172,8 +172,15 @@
                   {%- endif -%}
                 {%- endif -%}
               </p>
+
+              
+
             {%- when 'description' -%}
+
+              
               {%- if product.description != blank -%}
+                {%- render 'receive-by' %}
+
                 <div class="product__description rte quick-add-hidden" {{ block.shopify_attributes }}>
                   {{ product.description }}
                 </div>
